# niphlem

./: .gitignore  LICENSE  README.md  setup.cfg
code/: clean.py  events.py  input.py  input_data.py  regressors.py  test.py
docs/: .gitignore  Makefile  README.html  README.rst  api.html  api.rst  citing.html  citing.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js  tutorials.html  tutorials.rst  user_guide.html  user_guide.rst
docs/_modules/: index.html
docs/_sources/: README.rst.txt  api.rst.txt  citing.rst.txt  index.rst.txt  tutorials.rst.txt  user_guide.rst.txt
docs/_static/: documentation_options.js
docs/tutorials/: tutorial1.html  tutorial1.nblink  tutorial2.html  tutorial2.ipynb  tutorial2.nblink  tutorial3.html  tutorial3.ipynb  tutorial4.html  tutorial4.nblink
docs/tutorials_links/: tutorial1.html  tutorial1.ipynb  tutorial2.html
examples/: demo_ebach.ipynb  demo_hcp.ipynb  demo_peak_detection.ipynb  peak_ecg.ipynb  peak_ecg_diff_freqs.ipynb  plots.ipynb  regressors_objects.ipynb  tutorial1.ipynb  tutorial2.ipynb  tutorial3.ipynb  tutorial4.ipynb
niphlem/: __init__.py  clean.py  events.py  input_data.py  models.py  sample_pipeline.py  utils.py
niphlem/report/: __init__.py  ecg_report.py  generate_QC_report.py  html_document.py  html_report.py  pulse_report.py  report_body.html  report_body_pulse.html  report_body_resp.html  reporting.py  (+3 more)
notebooks/: Demo.ipynb  compare_old_new_loadings.ipynb  demo_ebach.ipynb  demo_hcp.ipynb  peak_ecg.ipynb
tests/: test_example.py  test_input.py  test_regressors.py
(+17 files in other folders)
