[metadata]
name = niphlem
version = attr: niphlem.__version__
description = Physiological Log Extraction for Modelling in Neuroimaging
long_description = file: README.md
url = https://github.com/CoAxLab/niphlem
project_urls =
    Bug Tracker = https://github.com/CoAxLab/niphlem/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = 
    niphlem
    niphlem.report
python_requires = >=3.6

[options.package_data]
* = *.html
